# DamidoumML

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  ci.yaml  ciV2.yaml  formatting.yaml  linting.yaml  testbench.yaml
core/: CmakeLists.txt  main  main.cpp
core/array/: CMakeLists.txt  array.cpp  array.h  buffer.cpp  buffer.h
core/main.dSYM/Contents/Resources/DWARF/: main
core/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
core/utils/: types.h
damidoumML/: CMakeLists.txt  array.cpp  array.h  buffer.cpp  buffer.h  types.h
damidoumML/utils/: CMakeLists.txt  utils.cpp  utils.h
examples/cpp/: CMakeLists.txt  array_ex.cpp
examples/python/: array_ex.py
python/: example.cpp  main.py  test.cpp
python/array/: CMakeLists.txt  array_binding.cpp
python/damidoumPyML/: __init__.py  array.py
python/src/: CMakeLists.txt  array.cpp  array_binding.cpp
python/src/utils/: CMakeLists.txt  utils.cpp  utils.h
python/tests/: test_array.py
tests/: test_array.py
