[project]
name = "damidoumPyML"
version = "0.0.1"
description = "A minimal machine learning library for personal learning. "
readme = "README.md"
author = [
  { name="Damidoum", email = "damien.rouchouse@etu.minesparis.psl.eu"}
]
requires-python = ">=3.10"
license = {file = "LICENSE"}

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
